[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsic-net"
version = "0.1.0"
description = "Paper companion implementation of DSIC-Net for two-stage brain-age estimation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "nibabel>=5.2,<6",
  "numpy>=1.26,<3",
  "torch>=2.2,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
